2004-07-12  Andrew Pinski  <apinski@apple.com>

PR c++/16475
        Revert:
        2004-07-07  H.J. Lu  <hongjiu.lu@intel.com>
                PR c++/16276
                * rtti.c (emit_tinfo_decl): Turn off DECL_ONE_ONLY if typeinfo
                is not public.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@84583 138bc75d-0d04-0410-961f-82ee72b054a4