gcc/cp/rtti.c
@@ -1460,11 +1460,7 @@ emit_tinfo_decl (tree decl)
   DECL_EXTERNAL (decl) = 0;
   TREE_PUBLIC (decl) = !non_public;
   if (non_public)
-    {
-      DECL_COMDAT (decl) = 0;
-      if (SUPPORTS_ONE_ONLY)
-	DECL_ONE_ONLY (decl) = 0;
-    }
+    DECL_COMDAT (decl) = 0;
 
   DECL_INITIAL (decl) = var_init;
   mark_used (decl);
